@@ -83,11 +83,44 @@ def util(which: String) =
     ExclusionRule(organization = "org.scala-tools.testing"),
     ExclusionRule(organization = "org.mockito"))
 
+def travisTestJavaOptions: Seq[String] = {
+  // We have some custom configuration for the Travis environment
+  // https://docs.travis-ci.com/user/environment-variables/#default-environment-variables
+  val travisBuild = sys.env.getOrElse("TRAVIS", "false").toBoolean
+  if (travisBuild) {
+    Seq(
+      "-DSKIP_FLAKY=true",
+      "-DSKIP_FLAKY_TRAVIS=true",
+      "-Dsbt.log.noformat=true"
+    )
+  } else {
+    Seq(
+      "-DSKIP_FLAKY=true"
+    )
+  }
+}
+
+def gcJavaOptions: Seq[String] = {
+  Seq(
+    "-XX:+UseParNewGC",
+    "-XX:+UseConcMarkSweepGC",
+    "-XX:+CMSParallelRemarkEnabled",
+    "-XX:+CMSClassUnloadingEnabled",
+    "-XX:ReservedCodeCacheSize=128m",
+    "-XX:SurvivorRatio=128",
+    "-XX:MaxTenuringThreshold=0",
+    "-Xss8M",
+    "-Xms512M",
+    "-Xmx3G"
+  )
+}
+
 val sharedSettings = Seq(
   version := releaseVersion,
   organization := "com.twitter",
   scalaVersion := "2.12.8",
   crossScalaVersions := Seq("2.11.12", "2.12.8"),
+  fork in Test := true, // We have to fork to get the JavaOptions
   libraryDependencies ++= Seq(
     "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
     "org.scalatest" %% "scalatest" % "3.0.0" % "test",
@@ -116,10 +149,24 @@ val sharedSettings = Seq(
     "-Xlint:-missing-interpolator",
     "-Ypatmat-exhaust-depth", "40"
   ),
-  javacOptions ++= Seq("-Xlint:unchecked", "-source", "1.8", "-target", "1.8"),
+  
+  javacOptions ++= Seq(
+    "-Xlint:unchecked",
+    "-source", "1.8",
+    "-target", "1.8"
+  ),
+  
   javacOptions in doc := Seq("-source", "1.8"),
 
-  javaOptions in Test := Seq("-DSKIP_FLAKY=true"),
+  javaOptions ++= Seq(
+    "-Djava.net.preferIPv4Stack=true",
+    "-XX:+AggressiveOpts",
+    "-server"
+  ),
+
+  javaOptions ++= gcJavaOptions,
+
+  javaOptions in Test ++= travisTestJavaOptions,
 
   // This is bad news for things like com.twitter.util.Time
   parallelExecution in Test := false,
@@ -437,7 +484,6 @@ lazy val finagleServersets = Project(
   sharedSettings
 ).settings(
   name := "finagle-serversets",
-  fork in Test := true,
   libraryDependencies ++= Seq(
     caffeineLib,
     util("cache"),
